--- a/leafhub/src/main/resources/application.properties
+++ b/leafhub/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.session.timeout=604800
 server.error.whitelabel.enabled=false
 spring.datasource.driver_class = com.mysql.jdbc.Driver
 
-spring.datasource.url = jdbc:mysql://java-app-mysql.cudacc3gfqje.ap-south-1.rds.amazonaws.com:3306/xe?useSSL=false&useUnicode=yes&characterEncoding=UTF-8	
+spring.datasource.url = jdbc:mysql://leafhub.cdn9glg4vr8u.ap-south-2.rds.amazonaws.com:3306/xe?useSSL=false&useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username = admin
 spring.datasource.password = Tuna4321
 
